# isopsephism

./: README.md  isopsephism.py  pyproject.toml  setup.py
tests/: test_isopsephism.py
tests/.cache/v/cache/: lastfailed
